Add headers in project

--- a/T1/Makefile
+++ b/T1/Makefile
@@ -1,8 +1,6 @@
 all:
-	g++ main.cpp -lglfw -lGL -lGLEW -lm -o main_run
+	g++ Source/Main.cpp Headers/Events.hpp Source/Events.cpp Headers/FragmentShaderInit.hpp Source/FragmentShaderInit.cpp Headers/VertexShaderInit.hpp Source/VertexShaderInit.cpp -lglfw -lGL -lGLEW -lm -o main_run
 	
 run:
 	./main_run
-
-clean:
 	rm main_run
